<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idBienvenida"
        android:layout_width="205dp"
        android:layout_height="155dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:text="@string/texto_bienvenida"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="56dp"
        android:text="@string/made_by"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/idBienvenida"
        app:layout_constraintTop_toBottomOf="@+id/idBienvenida" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:onClick="salir"
        android:text="@string/salir"
        app:layout_constraintEnd_toStartOf="@+id/btnEntrar"
        app:layout_constraintTop_toTopOf="@+id/btnEntrar" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="180dp"
        android:onClick="entrar"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="@+id/idBienvenida"
        app:layout_constraintTop_toBottomOf="@+id/idBienvenida" />

</androidx.constraintlayout.widget.ConstraintLayout>